--- a/css/styles.css
+++ b/css/styles.css
@@ -309,7 +309,7 @@ footer {
 
 
 
-/* --------- Tamaños --------- */
+/* --------- Sizes --------- */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 
